--- a/detail-album.html
+++ b/detail-album.html
@@ -34,135 +34,138 @@
 
      <!--body-->
      <container class="container-album">
-        <article class="article-album">
-            <div><img src="./img/img_canciones/blinding_lights.jpg" alt="foto-tapadisco-blindingslights"></div>
-            <div class="track-data">
-                <h3>Album: After Hours</h3>
-                <h4>Artista: The Weekend</h4>
-                <h4>Genero: Electro-Pop</h4>
-                <h4>Publicado en: 29 Nov 2019</h4>
+        <section class="section-album">
+            <article><img src="./img/img_albums/el_ultimo_tour.jpg" alt="foto-tapadisco-blindingslights"></article>
+            <article class="album-data">
+                <h3>Album: El ultimo tour del mundo</h3>
+                <h4>Artista: Bad Bunny</h4>
+                <h4>Genero/s: Reggaeton, Rock, Trap, Trap Latino </h4>
+                <h4>Publicado en: 27 Nov 2020</h4>
                 <h4>Canciones del album:</h4>
                 <ul>
-                    <li>Alone Again</li>
-                    <li>Too Late</li>
-                    <li>Hardest To Love</li>
-                    <li>Scared To Live</li>
-                    <li>Snowchild</li>
-                    <li>Escape From LA</li>
-                    <li>Heartless</li>
-                    <li>Faith</li>
-                    <li>Blinding Lights</li>
-                    <li>In Your Eyes</li>
-                    <li>Save Your Tears</li>
-                    <li>Repeat After Me</li>
-                    <li>After Hours</li>
-                    <li>Until I Bleed Out</li>
+                    <li>El mundo es mío</li>
+                    <li>Te mudaste</li>
+                    <li>Hoy cobré</li>
+                    <li>Maldita pobreza</li>
+                    <li>La noche de anoche</li>
+                    <li>Te deseo lo mejor</li>
+                    <li>Yo visto así</li>
+                    <li>Haciendo que me amas</li>
+                    <li>Booker T</li>
+                    <li>La droga</li>
+                    <li>Dakiti</li>
+                    <li>Trellas</li>
+                    <li>Sorry papi</li>
+                    <li>120</li>
+                    <li>Antes que se acabe</li>
+                    <li>Cantares de Navidad</li>
                 </ul>
-            </div>
+            </article>
             <iframe src="" frameborder="0"></iframe>
-        </article>
-        <article class="article-album">
-            <div class="track-img"><img src="./img/img_canciones/peaches.jpg" alt="foto-tapadisco-peaches"></div>
-            <div class="track-data">
-                <h3>Album: Justice</h3>
-                <h4>Artista: Justin Bieber</h4>
-                <h4>Genero: Pop</h4>
-                <h4>Publicado en: 19 Mar 2021</h4>
+        </section>
+        <section class="section-album">
+            <article><img src="./img/img_albums/trapicheo.jpg" alt="foto-tapadisco-peaches"></article>
+            <article class="album-data">
+                <h3>Album: Trapichep (Mixtape)</h3>
+                <h4>Artista: Khea</h4>
+                <h4>Genero: Trap</h4>
+                <h4>Publicado en: 15 May 2020</h4>
                 <h4>Canciones del album:</h4>
                 <ul>
-                    <li>2 Much</li>
-                    <li>Deserve You</li>
-                    <li>As I Am</li>
-                    <li>Off My Face</li>
-                    <li>Holy</li>
-                    <li>Unstable</li>
-                    <li>MLK Interlude</li>
-                    <li>Die For You</li>
-                    <li>Hold On</li>
-                    <li>Somebody</li>
-                    <li>Ghost</li>
-                    <li>Peaches</li>
-                    <li>Love You Different</li>
-                    <li>Loved by You</li>
-                    <li>Anyone</li>
-                    <li>Lonely</li>
-                </ul>
-            </div>
+                    <li>Trapicheo</li>
+                    <li>Creo que</li>
+                    <li>Mamacita</li>
+                    <li>Algo aparte</li>
+                    <li>Blunt</li>
+                    <li>Valgo</li>
+                    <li>Miti y Miti</li>
+                    <li>Nuevo</li>
+                    <li>Is it por mi</li>
+                    <li>Gelato 44</li>
+            </article>
             <iframe src="" frameborder="0"></iframe>
-        </article>
-        <article class="article-album">
-            <div class="track-img"><img src="./img/img_canciones/Secrets.jpg" alt="foto-tapadisco-secrets"></div>
-            <div class="track-data">
-                <h3>Album: Waking up</h3>
-                <h4>Artista: One Republic</h4>
-                <h4>Genero: Pop-rock</h4>
-                <h4>Publicado en: 17 Nov 2009</h4>
+        </section>
+        <section class="section-album">
+            <article><img src="./img/img_albums/avicii-stories_album.jpg" alt="foto-tapadisco-secrets"></article>
+            <article class="album-data">
+                <h3>Album: Stories</h3>
+                <h4>Artista: Avicci</h4>
+                <h4>Genero: Dance/Electronica</h4>
+                <h4>Publicado en: 2 oct 2015</h4>
                 <h4>Canciones del album:</h4>
                 <ul>
-                    <li>Made for You</li>
-                    <li>All the Right Moves</li>
-                    <li>Secrets</li>
-                    <li>Everybody Loves Me</li>
-                    <li>Missing Persons 1 & 2</li>
-                    <li>Good Life</li>
-                    <li>All This Time</li>
-                    <li>Fear</li>
-                    <li>Waking Up</li>
-                    <li>Marchin On</li>
-                    <li>Lullaby</li>
+                    <li>Waiting for Love</li>
+                    <li>Talk to Myself</li>
+                    <li>Touch me</li>
+                    <li>Ten More Days</li>
+                    <li>For a Better Day</li>
+                    <li>Broken Arrows</li>
+                    <li>True Believer</li>
+                    <li>City Lights</li>
+                    <li>Pure Grinding</li>
+                    <li>Sunset Jesus</li>
+                    <li>Can´t Catch Me</li>
+                    <li>Somewhere in Stockholm</li>
+                    <li>Trouble</li>
+                    <li>Gonna Love Ya</li>
                 </ul>
-            </div>
+            </article>
             <iframe src="" frameborder="0"></iframe>
-        </article>
-        <article class="article-album">
-            <div class="track-img"><img src="./img/img_canciones/payphone.jpg" alt="foto-tapadisco-payphone"></div>
-            <div class="track-data">
-                <h3>Album: Overexposed</h3>
-                <h4>Artista:Maroon 5</h4>
-                <h4>Genero: Pop</h4>
-                <h4>Publicado en: 1 Ene 2012</h4>
+        </section>
+        <section class="section-album">
+            <article><img src="./img/img_albums/united.jpg" alt="foto-tapadisco-payphone"></article>
+            <article class="album-data">
+                <h3>Album: United We Are</h3>
+                <h4>Artista: Hardwell</h4>
+                <h4>Genero: House, Dance/Electronica</h4>
+                <h4>Publicado en: 23 Ene 2015</h4>
                 <h4>Canciones del album:</h4>
                 <ul>
-                    <li>One More Night</li>
-                    <li>Payphone</li>
-                    <li>Daylight</li>
-                    <li>Lucky Strike</li>
-                    <li>The Man Who Never Lied</li>
-                    <li>Love Somebody</li>
-                    <li>Ladykiller</li>
-                    <li>Fortune Teller</li>
-                    <li>Sad</li>
-                    <li>Tickets</li>
-                    <li>Doin´ Dirt</li>
-                    <li>Beutiful Goodbye</li>
+                    <li>Eclipse</li>
+                    <li>Follow Me</li>
+                    <li>Sally</li>
+                    <li>Let Me Be Your Home</li>
+                    <li>Colors</li>
+                    <li>Where Is Here Now</li>
+                    <li>United We Are</li>
+                    <li>Don´t Stop The Madness</li>
+                    <li>Young Again</li>
+                    <li>Echo</li>
+                    <li>Arcadia</li>
+                    <li>Area 51</li>
+                    <li>Nothing Can Hold Us Down</li>
+                    <li>Birds Fly</li>
                 </ul>
-            </div>
+            </article>
             <iframe src="" frameborder="0"></iframe>
-        </article>
-        <article class="article-album">
-            <div class="track-img"><img src="./img/img_canciones/get_lucky.jpg" alt="foto-tapadisco-getlucky"></div>
-            <div class="track-data">
-                <h3>Album: Get Lucky</h3>
-                <h4>Artista:Daft Punk</h4>
-                <h4>Genero: Funk</h4>
-                <h4>Published in:14 Sep 2009 </h4>
+        </section>
+        <section class="section-album">
+            <article><img src="./img/img_albums/forever.jpg" alt="foto-tapadisco-getlucky"></article>
+            <article class="album-data">
+                <h3>Album: Forever</h3>
+                <h4>Artista: Alesso</h4>
+                <h4>Genero: Dance/Electronica</h4>
+                <h4>Published in: 22 May 2015</h4>
                 <h4>Canciones del album:</h4>
                 <ul>
-                    <li>Border Reiver</li>
-                    <li>Hard Shoulder</li>
-                    <li>You Can´t Beat the House</li>
-                    <li>Before Gas and TV</li>
-                    <li>Monteleone</li>
-                    <li>Cleaning My Gun</li>
-                    <li>The Car Was the One</li>
-                    <li>Remembrance Day</li>
-                    <li>Get lucky</li>
-                    <li>So Far from the Clyde</li>
-                    <li>Piper to the end</li>
+                    <li>Profondo</li>
+                    <li>Payday</li>
+                    <li>Heroes(We Could Be)</li>
+                    <li>Tear the Roof Up</li>
+                    <li>Cool</li>
+                    <li>Scars</li>
+                    <li>Sweet Escape</li>
+                    <li>Destinations</li>
+                    <li>If It Wasn´t For You</li>
+                    <li>In My Blood</li>
+                    <li>Under Control</li>
+                    <li>All This Love</li>
+                    <li>If I Lose Myself</li>
+                    <li>Immortale</li>
                 </ul>
-            </div>
+            </article>
             <iframe src="" frameborder="0"></iframe>
-        </article>
+        </section>
     </container>
 
     <!--footer-->
