--- a/detail-track.html
+++ b/detail-track.html
@@ -36,50 +36,9 @@
             <div><img src="./img/img_canciones/blinding_lights.jpg" alt="foto-tapadisco-blindingslights"></div>
             <div class="track-data">
                 <h3>Blinding Lights</h3>
-                <h4>The Weekend</h4>
+                <h4>Artista: The Weekend</h4>
                 <h4>Album: After Hours</h4>
-                <audio src=""></audio>
-                <iframe width="250" height="150" src="https://www.youtube.com/embed/4NRXx6U8ABQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <a href="" class="agregarplaylist"><strong>Agregar a Playlist</strong></a>
-            </div>
-        </article>
-        <article class="article-track">
-            <div class="track-img"><img src="./img/img_canciones/peaches.jpg" alt="foto-tapadisco-peaches"></div>
-            <div class="track-data">
-                <h3>Peaches</h3>
-                <h4>Justin Bieber</h4>
-                <h4>Justice</h4>
-                <iframe width="250" height="150" src="https://www.youtube.com/embed/tQ0yjYUFKAE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <a href="" class="agregarplaylist"><strong>Agregar a Playlist</strong></a>
-            </div>
-        </article>
-        <article class="article-track">
-            <div class="track-img"><img src="./img/img_canciones/Secrets.jpg" alt="foto-tapadisco-secrets"></div>
-            <div class="track-data">
-                <h3>Secrets</h3>
-                <h4>One Republic</h4>
-                <h4>Waking Up</h4>
-                <iframe width="250" height="150" src="https://www.youtube.com/embed/qHm9MG9xw1o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <a href="" class="agregarplaylist"><strong>Agregar a Playlist</strong></a>
-            </div>
-        </article>
-        <article class="article-track">
-            <div class="track-img"><img src="./img/img_canciones/payphone.jpg" alt="foto-tapadisco-payphone"></div>
-            <div class="track-data">
-                <h3>Payphone</h3>
-                <h4>Maroon 5</h4>
-                <h4>Overexposed Track By Track</h4>
-                <iframe width="250" height="150" src="https://www.youtube.com/embed/KRaWnd3LJfs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <a href="" class="agregarplaylist"><strong>Agregar a Playlist</strong></a>
-            </div>
-        </article>
-        <article class="article-track">
-            <div class="track-img"><img src="./img/img_canciones/get_lucky.jpg" alt="foto-tapadisco-getlucky"></div>
-            <div class="track-data">
-                <h3>Get Lucky</h3>
-                <h4>Daft Punk</h4>
-                <h4>Get Lucky</h4>
-                <iframe width="250" height="150" src="https://www.youtube.com/embed/5NV6Rdv1a3I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <video src="./audio/The Weeknd - Blinding Lights (Official Video).webm" controls="controls" preload="auto"></video>
                 <a href="" class="agregarplaylist"><strong>Agregar a Playlist</strong></a>
             </div>
         </article>
