Actualización head y correción scroll index

--- a/detail-album.html
+++ b/detail-album.html
@@ -12,10 +12,10 @@
      <!-- header -->
      <header>
         <div>
-            <img class="logo" src="./img/logo.jpg.ejemplo.png" alt="logo">
+            <a href="./index.html"><img class="logo" src="./img/logo.jpg.ejemplo.png" alt="logo"></a>
         </div>
         <div id="centroheader">
-        <nav class="main-nav">
+        <nav>
             <ul>
                 <li><a href="./index.html">Inicio</a></li>
                 <li><a href="./detail-genres.html">Géneros</a></li>
