--- a/detail-artist.html
+++ b/detail-artist.html
@@ -19,7 +19,7 @@
     <!-- header -->
     <header>
         <div>
-            <img class="logo" src="./img/logo.jpg.ejemplo.png" alt="logo">
+            <a href="./index.html"><img class="logo" src="./img/logo.jpg.ejemplo.png" alt="logo"></a>
         </div>
         <div id="centroheader">
         <nav class="main-nav">
