--- a/detail-album.html
+++ b/detail-album.html
@@ -32,65 +32,17 @@
      <!--body-->
      <container class="container-album">
         <section class="section-album">
-            <article><img src="./img/img_albums/el_ultimo_tour.jpg" alt="foto-tapadisco-blindingslights"></article>
-            <article class="album-data">
-                <h3>Album: El ultimo tour del mundo</h3>
-                <h4>Artista: Bad Bunny</h4>
-                <h4>Genero/s: Reggaeton, Rock, Trap, Trap Latino </h4>
-                <h4>Publicado en: 27 Nov 2020</h4>
-                <h4>Canciones del album:</h4>
-                <ul>
-                    <li>El mundo es mío</li>
-                    <li>Te mudaste</li>
-                    <li>Hoy cobré</li>
-                    <li>Maldita pobreza</li>
-                    <li>La noche de anoche</li>
-                    <li>Te deseo lo mejor</li>
-                    <li>Yo visto así</li>
-                    <li>Haciendo que me amas</li>
-                    <li>Booker T</li>
-                    <li>La droga</li>
-                    <li>Dakiti</li>
-                    <li>Trellas</li>
-                    <li>Sorry papi</li>
-                    <li>120</li>
-                    <li>Antes que se acabe</li>
-                    <li>Cantares de Navidad</li>
-                </ul>
-            </article>
-            <iframe src="" frameborder="0"></iframe>
-        </section>
-        <section class="section-album">
-            <article><img src="./img/img_albums/trapicheo.jpg" alt="foto-tapadisco-peaches"></article>
-            <article class="album-data">
-                <h3>Album: Trapichep (Mixtape)</h3>
-                <h4>Artista: Khea</h4>
-                <h4>Genero: Trap</h4>
-                <h4>Publicado en: 15 May 2020</h4>
-                <h4>Canciones del album:</h4>
-                <ul>
-                    <li>Trapicheo</li>
-                    <li>Creo que</li>
-                    <li>Mamacita</li>
-                    <li>Algo aparte</li>
-                    <li>Blunt</li>
-                    <li>Valgo</li>
-                    <li>Miti y Miti</li>
-                    <li>Nuevo</li>
-                    <li>Is it por mi</li>
-                    <li>Gelato 44</li>
-            </article>
-            <iframe src="" frameborder="0"></iframe>
-        </section>
-        <section class="section-album">
             <article><img src="./img/img_albums/avicii-stories_album.jpg" alt="foto-tapadisco-secrets"></article>
             <article class="album-data">
-                <h3>Album: Stories</h3>
-                <h4>Artista: Avicci</h4>
-                <h4>Genero: Dance/Electronica</h4>
-                <h4>Publicado en: 2 oct 2015</h4>
-                <h4>Canciones del album:</h4>
-                <ul>
+                <h2>Album: Stories</h2>
+                <h2>Artista: Avicci</h2>
+                <h3>Genero: Dance/Electronica</h3>
+                <h3>Publicado en: 2 oct 2015</h3>
+               
+            </article>
+            <article class="album-songs">    
+                <h2>Canciones del album:</h2>
+                <ul> 
                     <li>Waiting for Love</li>
                     <li>Talk to Myself</li>
                     <li>Touch me</li>
@@ -107,64 +59,9 @@
                     <li>Gonna Love Ya</li>
                 </ul>
             </article>
+            
             <iframe src="" frameborder="0"></iframe>
         </section>
-        <section class="section-album">
-            <article><img src="./img/img_albums/united.jpg" alt="foto-tapadisco-payphone"></article>
-            <article class="album-data">
-                <h3>Album: United We Are</h3>
-                <h4>Artista: Hardwell</h4>
-                <h4>Genero: House, Dance/Electronica</h4>
-                <h4>Publicado en: 23 Ene 2015</h4>
-                <h4>Canciones del album:</h4>
-                <ul>
-                    <li>Eclipse</li>
-                    <li>Follow Me</li>
-                    <li>Sally</li>
-                    <li>Let Me Be Your Home</li>
-                    <li>Colors</li>
-                    <li>Where Is Here Now</li>
-                    <li>United We Are</li>
-                    <li>Don´t Stop The Madness</li>
-                    <li>Young Again</li>
-                    <li>Echo</li>
-                    <li>Arcadia</li>
-                    <li>Area 51</li>
-                    <li>Nothing Can Hold Us Down</li>
-                    <li>Birds Fly</li>
-                </ul>
-            </article>
-            <iframe src="" frameborder="0"></iframe>
-        </section>
-        <section class="section-album">
-            <article><img src="./img/img_albums/forever.jpg" alt="foto-tapadisco-getlucky"></article>
-            <article class="album-data">
-                <h3>Album: Forever</h3>
-                <h4>Artista: Alesso</h4>
-                <h4>Genero: Dance/Electronica</h4>
-                <h4>Published in: 22 May 2015</h4>
-                <h4>Canciones del album:</h4>
-                <ul>
-                    <li>Profondo</li>
-                    <li>Payday</li>
-                    <li>Heroes(We Could Be)</li>
-                    <li>Tear the Roof Up</li>
-                    <li>Cool</li>
-                    <li>Scars</li>
-                    <li>Sweet Escape</li>
-                    <li>Destinations</li>
-                    <li>If It Wasn´t For You</li>
-                    <li>In My Blood</li>
-                    <li>Under Control</li>
-                    <li>All This Love</li>
-                    <li>If I Lose Myself</li>
-                    <li>Immortale</li>
-                </ul>
-            </article>
-            <iframe src="" frameborder="0"></iframe>
-        </section>
-    </container>
-
     <!--footer-->
     <footer>
         <article>
