--- a/detail-track.html
+++ b/detail-track.html
@@ -16,13 +16,13 @@
             <a href="./index.html"><img class="logo" src="./img/logo.jpg.ejemplo.png" alt="logo"></a>
         </div>
         <div id="centroheader">
-        <nav class="main-nav">
-            <ul>
-                <li><a href="./index.html">Inicio</a></li>
-                <li><a href="./detail-genres.html">Géneros</a></li>
-                <li><a href="./playlist.html">Playlist</a></li>
-            </ul>
-        </nav>
+            <nav class="main-nav">
+                <ul>
+                    <li><a href="./index.html">Inicio</a></li>
+                    <li><a href="./detail-genres.html">Géneros</a></li>
+                    <li><a href="./playlist.html">Playlist</a></li>
+                </ul>
+            </nav>
             <form action="./search-results.html" class="barrabusqueda">
                     <input type="text" name="search" value="" placeholder="Canciones, artistas, albums...">
                     <button type="submit">Buscar</button>
@@ -51,6 +51,7 @@
             <a href="osonciniviola@udesa.edu.ar">Email</a>
             <a href="2964-445566">Teléfono</a>
         </article>
+        <div></div>
         <article class="owners">
             <h4>Owners</h4>
             <h3>Julian Araujo</h3>
