--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./css/style.css">
-
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@500&family=Zen+Dots&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -18,9 +17,7 @@
     <title>Spotify</title>
 </head>
 
-
-
-<body>
+<body class="backgroundindex">
     <!-- header -->
     <header>
         <div>
@@ -44,7 +41,7 @@
     <!--canciones-->
     <span><h2 class="titulos-index">Canciones</h2></span>
     <section class="main-canciones">
-        
+
         <a href="./detail-track.html">
             <article class="canciones">
             <div class="img-container">
