Header y footer listos

--- a/detail-track.html
+++ b/detail-track.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">   
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"> 
     <title>Detalle</title>
 </head>
 <body>   
@@ -46,18 +47,30 @@
 
     <!--footer-->
     <footer>
-        <article class="contact">
-            <h4><strong>Contactanos</strong></h4>
-            <a href="osonciniviola@udesa.edu.ar">Email</a>
-            <a href="2964-445566">Teléfono</a>
-        </article>
-        <div></div>
-        <article class="owners">
+        <section class="contact">
+            <h4 class=""><strong>Contact</strong></h4>
+            <article class="contentcontact">
+                <div>
+                    <i class="fas fa-envelope-square"></i>
+                    <a href="osonciniviola@udesa.edu.ar">Email</a> 
+                </div>
+                <div>
+                    <i class="fas fa-mobile-alt"></i>
+                    <a href="2964-445566">Cellphone</a>
+                </div>
+            </article>
+        </section>
+        <section class="owners">
             <h4>Owners</h4>
-            <h3>Julian Araujo</h3>
-            <h3>Soncini Octavio</h3>
-            <h3>Tufró Nicolas</h3>
-        </article>
+            <p>
+                <i class="fas fa-users"></i>
+            </p>
+            <ul>
+                <li>Octavio Soncini</li>
+                <li>Julian Araujo</li>
+                <li>Nicolas Tufró</li>
+            </ul>
+        </section>
     </footer>
 </body>
 </html>
