--- a/search-results.html
+++ b/search-results.html
@@ -15,23 +15,46 @@
             <a href="./index.html"><img class="logo" src="./img/logo.jpg.ejemplo.png" alt="logo"></a>
         </div>
         <div id="centroheader">
-        <nav class="main-nav">
-            <ul>
-                <li><a href="./index.html">Inicio</a></li>
-                <li><a href="./detail-genres.html">Géneros</a></li>
-                <li><a href="./playlist.html">Playlist</a></li>
-            </ul>
-        </nav>
+            <nav class="main-nav">
+                <ul>
+                    <li><a href="./index.html">Inicio</a></li>
+                    <li><a href="./detail-genres.html">Géneros</a></li>
+                    <li><a href="./playlist.html">Playlist</a></li>
+                </ul>
+            </nav>
+            <form action="./search-results.html" class="barrabusqueda">
+                    <input type="text" name="search" value="" placeholder="Canciones, artistas, albums...">
+                    <button type="submit">Buscar</button>
+            </form>
         </div>
     </header>
 
-    <!-footer--
+    <!--footer-->
     <footer>
-        <article>
-            <h4><strong>Contactanos</strong></h4>
-            <a href="osonciniviola@udesa.edu.ar">Email</a>
-            <a href="2964-445566">Teléfono</a>
-        </article>
+        <section class="contact">
+            <h4 class=""><strong>Contact</strong></h4>
+            <article class="contentcontact">
+                <div>
+                    <i class="fas fa-envelope-square"></i>
+                    <a href="osonciniviola@udesa.edu.ar">Email</a> 
+                </div>
+                <div>
+                    <i class="fas fa-mobile-alt"></i>
+                    <a href="2964-445566">Cellphone</a>
+                </div>
+            </article>
+        </section>
+        <section class="owners">
+            <h4>Owners</h4>
+            <p>
+                <i class="fas fa-users"></i>
+            </p>
+            <ul>
+                <li>Octavio Soncini</li>
+                <li>Julian Araujo</li>
+                <li>Nicolas Tufró</li>
+            </ul>
+        </section>
     </footer>
 </body>
 </html>
