--- a/index.html
+++ b/index.html
@@ -216,14 +216,33 @@
         </article>
         </a>
     </section>
-    
+
     <!--footer-->
     <footer>
-        <article>
-            <h4><strong>Contactanos</strong></h4>
-            <a href="osonciniviola@udesa.edu.ar">Email</a>
-            <a href="2964-445566">Teléfono</a>
-        </article>
+        <section class="contact">
+            <h4 class=""><strong>Contact</strong></h4>
+            <article class="contentcontact">
+                <div>
+                    <i class="fas fa-envelope-square"></i>
+                    <a href="osonciniviola@udesa.edu.ar">Email</a> 
+                </div>
+                <div>
+                    <i class="fas fa-mobile-alt"></i>
+                    <a href="2964-445566">Cellphone</a>
+                </div>
+            </article>
+        </section>
+        <section class="owners">
+            <h4>Owners</h4>
+            <p>
+                <i class="fas fa-users"></i>
+            </p>
+            <ul>
+                <li>Octavio Soncini</li>
+                <li>Julian Araujo</li>
+                <li>Nicolas Tufró</li>
+            </ul>
+        </section>
     </footer>
 </body>
 </html>
