--- a/detail-artist.html
+++ b/detail-artist.html
@@ -42,12 +42,14 @@
             <img class="da-img" src="./img/img_artistas/david_guetta.jpg" alt="david_guetta">
             </div>
             <div class="da-div-texto">
-            <h2 class="da-nombre">David Guetta</h2>
-                <h4 class="da-tracks">BED</h4>
-                <h4 class="da-tracks">Floating Through Space</h4>
-                <h4 class="da-tracks">Memories</h4>
-                <h4 class="da-tracks">Let's Love</h4>
-                <h4 class="da-tracks">Titanium</h4>
+                <h2 class="da-nombre">David Guetta</h2>
+                <ul>
+                    <li><h4 class="da-tracks"><a href="./detail-track.html">BED</a></h4></li>
+                    <li><h4 class="da-tracks"><a href="./detail-track.html">Floating Through Space</a></h4></li>
+                    <li><h4 class="da-tracks"><a href="./detail-track.html">Memories</a></h4></li>
+                    <li><h4 class="da-tracks"><a href="./detail-track.html">Let's Love</a></h4></li>
+                    <li><h4 class="da-tracks"><a href="./detail-track.html">Titanium</a></h4></li>
+                </ul>
             </div>
         </article>
     </main>
