--- a/detail-track.html
+++ b/detail-track.html
@@ -38,8 +38,8 @@
             <div><img src="./img/img_canciones/blinding_lights.jpg" alt="foto-tapadisco-blindingslights"></div>
             <div class="track-data">
                 <h3>Blinding Lights</h3>
-                <h4>Artista: The Weekend</h4>
-                <h4>Album: After Hours</h4>
+                <h4><a href="./detail-artist.html">Artista: The Weekend</a></h4>
+                <h4><a href="./detail-album.html">Album: After Hours</a></h4>
                 <video src="./audio/The Weeknd - Blinding Lights (Official Video).webm" controls="controls" preload="auto"></video>
                 <a href="" class="agregarplaylist"><strong>Agregar a Playlist</strong></a>
             </div>
