--- a/detail-genres.html
+++ b/detail-genres.html
@@ -29,6 +29,42 @@
             </form>
         </div>
     </header>
+     <!--container-genres-->
+     <container class="genres">
+        <section class="genres">
+            <article class="genres">
+                <h2>Géneros</h2>
+                <ul class="genres">
+                    <li><a href="./genres.html">Dance/Electronica</a> </li>
+                    <li><a href="./genres.html">Reggaeton</a> </li>
+                    <li><a href="./genres.html">Trap</a> </li>
+                    <li><a href="./genres.html">Rock</a> </li>
+                    <li><a href="./genres.html">Trap Latino</a> </li>
+                </ul>
+                <ul class="genres">
+                    <li><a href="./genres.html">House</a> </li>
+                    <li><a href="./genres.html">Pop</a> </li>
+                    <li><a href="./genres.html">Pop-Rock</a> </li>
+                    <li><a href="./genres.html">Electro-Pop</a> </li>
+                    <li><a href="./genres.html">Funk</a> </li>
+                </ul> 
+                <ul class="genres">
+                    <li><a href="./genres.html">Musica Clasica</a></li>
+                    <li><a href="./genres.html">Jazz</a></li>
+                    <li><a href="./genres.html">Soul</a></li>
+                    <li><a href="./genres.html">Blues</a></li>
+                    <li><a href="./genres.html">Flamenco</a></li>
+                </ul>    
+                <ul class="genres">
+                    <li><a href="./genres.html">Salsa</a></li>
+                    <li><a href="./genres.html">Tango</a></li>
+                    <li><a href="./genres.html">Punk</a></li>
+                    <li><a href="./genres.html">Metal</a></li>
+                    <li><a href="./genres.html">Rap</a> </li>        
+                </ul>           
+            </article>
+        </section>
+    </container>   
 
     <!--footer-->
     <footer>
