--- a/playlist.html
+++ b/playlist.html
@@ -30,6 +30,9 @@
         </div>
     </header>
 
+    <!--PlaylistGrid-->
+    
+
     <!--footer-->
     <footer>
         <section class="contact">
