genres y detail genres html y css

--- a/detail-track.html
+++ b/detail-track.html
@@ -21,7 +21,7 @@
             <nav class="main-nav">
                 <ul>
                     <li><a href="./index.html">Inicio</a></li>
-                    <li><a href="./detail-genres.html">Géneros</a></li>
+                    <li><a href="./genres.html">Géneros</a></li>
                     <li><a href="./playlist.html">Playlist</a></li>
                 </ul>
             </nav>
