--- a/genres.html
+++ b/genres.html
@@ -19,7 +19,7 @@
         <nav class="main-nav">
             <ul>
                 <li><a href="./index.html">Inicio</a></li>
-                <li><a href="./detail-genres.html">Géneros</a></li>
+                <li><a href="./genres.html">Géneros</a></li>
                 <li><a href="./playlist.html">Playlist</a></li>
             </ul>
         </nav>
@@ -29,6 +29,42 @@
             </form>
         </div>
     </header>
+<!--body-->
+<container class="genres">
+    <section class="genres">
+        <article class="genres">
+            <h1>Géneros</h1>
+            <ul class="genres">
+                <li><a href="./detail-genres.html">Dance/Electronica</a> </li>
+                <li><a href="./detail-genres.html">Reggaeton</a> </li>
+                <li><a href="./detail-genres.html">Trap</a> </li>
+                <li><a href="./detail-genres.html">Rock</a> </li>
+                <li><a href="./detail-genres.html">Trap Latino</a> </li>
+            </ul>
+            <ul class="genres">
+                <li><a href="./detail-genres.html">House</a> </li>
+                <li><a href="./detail-genres.html">Pop</a> </li>
+                <li><a href="./detail-genres.html">Pop-Rock</a> </li>
+                <li><a href="./detail-genres.html">Electro-Pop</a> </li>
+                <li><a href="./detail-genres.html">Funk</a> </li>
+            </ul> 
+            <ul class="genres">
+                <li><a href="./detail-genres.html">Musica Clasica</a></li>
+                <li><a href="./detail-genres.html">Jazz</a></li>
+                <li><a href="./detail-genres.html">Soul</a></li>
+                <li><a href="./detail-genres.html">Blues</a></li>
+                <li><a href="./detail-genres.html">Flamenco</a></li>
+            </ul>    
+            <ul class="genres">
+                <li><a href="./detail-genres.html">Salsa</a></li>
+                <li><a href="./detail-genres.html">Tango</a></li>
+                <li><a href="./detail-genres.html">Punk</a></li>
+                <li><a href="./detail-genres.html">Metal</a></li>
+                <li><a href="./detail-genres.html">Rap</a> </li>        
+            </ul>           
+        </article>
+    </section>
+</container>       
     <!--footer-->
     <footer>
         <section class="contact">
