Fuentes y colores con Julian

--- a/search-results.html
+++ b/search-results.html
@@ -13,7 +13,7 @@
     <!-- header -->
     <header>
         <div>
-            <a href="./index.html"><img class="logo" src="./img/logo.jpg.ejemplo.png" alt="logo"></a>
+            <a href="./index.html"><img class="logo" src="./img/logos-turnedup.png" alt="logo"></a>
         </div>
         <div id="centroheader">
             <nav class="main-nav">
