--- a/detail-track.html
+++ b/detail-track.html
@@ -15,7 +15,7 @@
     <!-- header -->
     <header>
         <div>
-            <a href="./index.html"><img class="logo" src="./img/logo.jpg.ejemplo.png" alt="logo"></a>
+            <a href="./index.html"><img class="logo" src="./img/logos-turnedup.png" alt="logo"></a>
         </div>
         <div id="centroheader">
             <nav class="main-nav">
@@ -41,7 +41,7 @@
                 <h4><a href="./detail-artist.html">Artista: The Weekend</a></h4>
                 <h4><a href="./detail-album.html">Album: After Hours</a></h4>
                 <video src="./audio/The Weeknd - Blinding Lights (Official Video).webm" controls="controls" preload="auto"></video>
-                <a href="" class="agregarplaylist"><strong>Agregar a Playlist</strong></a>
+                <a href="./playlist.html" class="agregarplaylist"><strong>Agregar a Playlist</strong></a>
             </div>
         </article>
     </container>
