--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@500&family=Poppins&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"> 
-    <title>Spotify</title>
+    <title>TurnedUp</title>
 </head>
 
 <body class="backgroundindex">
     <!-- header -->
     <header>
         <div>
-            <a href="./index.html"><img class="logo" src="./img/logo.jpg.ejemplo.png" alt="logo"></a>
+            <a href="./index.html"><img class="logo" src="./img/logos-turnedup.png" alt="logo"></a>
         </div>
         <div id="centroheader">
         <nav class="main-nav">
