Arreglo header y footer

--- a/detail-track.html
+++ b/detail-track.html
@@ -40,7 +40,7 @@
                 <h3>Blinding Lights</h3>
                 <h4><a href="./detail-artist.html">Artista: The Weekend</a></h4>
                 <h4><a href="./detail-album.html">Album: After Hours</a></h4>
-                <video src="./audio/The Weeknd - Blinding Lights (Official Video).webm" controls="controls" preload="auto"></video>
+                <video src="./video/The Weeknd - Blinding Lights (Official Video).webm" controls="controls" preload="auto"></video>
                 <a href="./playlist.html" class="agregarplaylist"><strong>Agregar a Playlist</strong></a>
             </div>
         </article>
