--- a/playlist.html
+++ b/playlist.html
@@ -31,7 +31,9 @@
     </header>
 
     <!--PlaylistGrid-->
-    
+    <main>
+
+    </main>
 
     <!--footer-->
     <footer>
@@ -47,6 +49,9 @@
                     <a href="2964-445566">Cellphone</a>
                 </div>
             </article>
+        </section>
+        <section class="terms">
+            <a href="">Privacy & Legal</a>
         </section>
         <section class="owners">
             <h4>Owners</h4>
