Footer listo y Grilla Playlist

--- a/detail-genres.html
+++ b/detail-genres.html
@@ -40,20 +40,33 @@
             </ul>
         </article>
     </section>
+    
     <!--footer-->
     <footer>
         <section class="contact">
             <h4 class=""><strong>Contact</strong></h4>
             <article class="contentcontact">
-                <div>
-                    <i class="fas fa-envelope-square"></i>
-                    <a href="osonciniviola@udesa.edu.ar">Email</a> 
-                </div>
-                <div>
-                    <i class="fas fa-mobile-alt"></i>
-                    <a href="2964-445566">Cellphone</a>
-                </div>
+                <ul>
+                    <li>
+                        <a href="osonciniviola@udesa.edu.ar">Email</a> 
+                        <i class="fas fa-envelope-square"></i>
+                    </li>
+                    <li>
+                        <a href="2964-445566">Cellphone</a>
+                        <i class="fas fa-mobile-alt"></i>
+                    </li>
+                </ul>
             </article>
+        </section>
+        <section class="terms">
+            <ul>
+                <li>
+                    <a href="">Privacy & Legal</a>
+                </li>
+                <li>
+                    <i class="fab fa-slack"></i>
+                </li>
+            </ul>
         </section>
         <section class="owners">
             <h4>Owners</h4>
