detail-artist actualizado

--- a/detail-track.html
+++ b/detail-track.html
@@ -35,13 +35,15 @@
     <!--body-->
     <container class="container-track">
         <article class="article-track">
-            <div><img src="./img/img_canciones/blinding_lights.jpg" alt="foto-tapadisco-blindingslights"></div>
             <div class="track-data">
-                <h3>Blinding Lights</h3>
+                <img src="./img/img_canciones/blinding_lights.jpg" alt="foto-tapadisco-blindingslights">
+                <h4><strong>Blinding Lights</strong></h4>
                 <h4><a href="./detail-artist.html">Artista: The Weekend</a></h4>
                 <h4><a href="./detail-album.html">Album: After Hours</a></h4>
+                <a href="playlist.html" class="agregarplaylist">Agregar a PLaylist</a>
+            </div>
+            <div class="video">
                 <video src="./video/The Weeknd - Blinding Lights (Official Video).webm" controls="controls" preload="auto"></video>
-                <a href="./playlist.html" class="agregarplaylist"><strong>Agregar a Playlist</strong></a>
             </div>
         </article>
     </container>
