--- a/genres.html
+++ b/genres.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"> 
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <title>Géneros</title>
 </head>
 <body>
     <!-- header -->
@@ -34,7 +34,7 @@
         <article class="genres">
                 <h1>Géneros</h1>
                 <ul class="genres">
-                    <li><a href="./detail-genres.html">Dance/Electronica</a> </li>
+                    <li><a href="./detail-genres.html">Dance/Electronica</a></li>
                     <li><a href="./detail-genres.html">Reggaeton</a> </li>
                     <li><a href="./detail-genres.html">Trap</a> </li>
                     <li><a href="./detail-genres.html">Rock</a> </li>
