--- a/detail-artist.html
+++ b/detail-artist.html
@@ -7,10 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"> 
-    <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Poppins:wght@300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Roboto:wght@500&display=swap" rel="stylesheet">
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Poppins:wght@300&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Roboto:wght@500&display=swap"
+        rel="stylesheet">
+
     <title>Document</title>
 </head>
 
@@ -21,13 +23,13 @@
             <a href="./index.html"><img class="logo" src="./img/logos-turnedup.png" alt="logo"></a>
         </div>
         <div id="centroheader">
-        <nav class="main-nav">
-            <ul>
-                <li><a href="./index.html">Inicio</a></li>
-                <li><a href="./genres.html">Géneros</a></li>
-                <li><a href="./playlist.html">Playlist</a></li>
-            </ul>
-        </nav>
+            <nav class="main-nav">
+                <ul>
+                    <li><a href="./index.html">Inicio</a></li>
+                    <li><a href="./genres.html">Géneros</a></li>
+                    <li><a href="./playlist.html">Playlist</a></li>
+                </ul>
+            </nav>
             <form action="./search-results.html" class="barrabusqueda">
                 <input type="text" name="search" value="" placeholder="Canciones, artistas, albums...">
                 <button type="submit">Buscar</button>
@@ -39,21 +41,31 @@
     <main class="da-main">
         <article class="da-article">
             <div class="da-contenedor-img">
-            <img class="da-img" src="./img/img_artistas/david_guetta.jpg" alt="david_guetta">
+                <img class="da-img" src="./img/img_artistas/david_guetta.jpg" alt="david_guetta">
             </div>
             <div class="da-div-texto">
                 <h2 class="da-nombre">David Guetta</h2>
                 <ul>
-                    <li><h4 class="da-tracks"><a href="./detail-track.html">BED</a></h4></li>
-                    <li><h4 class="da-tracks"><a href="./detail-track.html">Floating Through Space</a></h4></li>
-                    <li><h4 class="da-tracks"><a href="./detail-track.html">Memories</a></h4></li>
-                    <li><h4 class="da-tracks"><a href="./detail-track.html">Let's Love</a></h4></li>
-                    <li><h4 class="da-tracks"><a href="./detail-track.html">Titanium</a></h4></li>
+                    <li>
+                        <h4 class="da-tracks"><a href="./detail-track.html">BED</a></h4>
+                    </li>
+                    <li>
+                        <h4 class="da-tracks"><a href="./detail-track.html">Floating Through Space</a></h4>
+                    </li>
+                    <li>
+                        <h4 class="da-tracks"><a href="./detail-track.html">Memories</a></h4>
+                    </li>
+                    <li>
+                        <h4 class="da-tracks"><a href="./detail-track.html">Let's Love</a></h4>
+                    </li>
+                    <li>
+                        <h4 class="da-tracks"><a href="./detail-track.html">Titanium</a></h4>
+                    </li>
                 </ul>
             </div>
         </article>
     </main>
-    
+
     <!--footer-->
     <footer>
         <section class="contact">
@@ -61,7 +73,7 @@
             <article class="contentcontact">
                 <ul>
                     <li>
-                        <a href="osonciniviola@udesa.edu.ar">Email</a> 
+                        <a href="osonciniviola@udesa.edu.ar">Email</a>
                         <i class="fas fa-envelope-square"></i>
                     </li>
                     <li>
@@ -94,4 +106,5 @@
         </section>
     </footer>
 </body>
+
 </html>
