Actualización Header y responsive de header y footer terminados

--- a/detail-artist.html
+++ b/detail-artist.html
@@ -17,20 +17,20 @@
 <body>
     <!-- header -->
     <header>
-        <div>
-            <a href="./index.html"><img class="logo" src="./img/logos-turnedup.png" alt="logo"></a>
+        <div class="logo" >
+            <a href="./index.html"><img src="./img/logos-turnedup.png" alt="logo"></a>
         </div>
         <div id="centroheader">
-        <nav class="main-nav">
-            <ul>
-                <li><a href="./index.html">Inicio</a></li>
-                <li><a href="./genres.html">Géneros</a></li>
-                <li><a href="./playlist.html">Playlist</a></li>
-            </ul>
-        </nav>
+            <nav class="main-nav">
+                <ul>
+                    <li><a href="./index.html">Inicio</a></li>
+                    <li><a href="./genres.html">Géneros</a></li>
+                    <li><a href="./playlist.html">Playlist</a></li>
+                </ul>
+            </nav>
             <form action="./search-results.html" class="barrabusqueda">
-                <input type="text" name="search" value="" placeholder="Canciones, artistas, albums...">
-                <button type="submit">Buscar</button>
+                    <input type="text" name="search" value="" placeholder="Canciones, artistas, albums...">
+                    <button type="submit">Buscar</button>
             </form>
         </div>
     </header>
