--- a/detail-track.html
+++ b/detail-track.html
@@ -14,8 +14,8 @@
 <body>   
     <!-- header -->
     <header>
-        <div>
-            <a href="./index.html"><img class="logo" src="./img/logos-turnedup.png" alt="logo"></a>
+        <div class="logo" >
+            <a href="./index.html"><img src="./img/logos-turnedup.png" alt="logo"></a>
         </div>
         <div id="centroheader">
             <nav class="main-nav">
@@ -31,7 +31,6 @@
             </form>
         </div>
     </header>
-
     <!--body-->
     <container class="container-track">
         <article class="article-track">
@@ -47,7 +46,6 @@
             </div>
         </article>
     </container>
-
     <!--footer-->
     <footer>
         <section class="contact">
