--- a/search-results.html
+++ b/search-results.html
@@ -12,14 +12,14 @@
 <body>
     <!-- header -->
     <header>
-        <div>
-            <a href="./index.html"><img class="logo" src="./img/logos-turnedup.png" alt="logo"></a>
+        <div class="logo" >
+            <a href="./index.html"><img src="./img/logos-turnedup.png" alt="logo"></a>
         </div>
         <div id="centroheader">
             <nav class="main-nav">
                 <ul>
                     <li><a href="./index.html">Inicio</a></li>
-                    <li><a href="./detail-genres.html">Géneros</a></li>
+                    <li><a href="./genres.html">Géneros</a></li>
                     <li><a href="./playlist.html">Playlist</a></li>
                 </ul>
             </nav>
